Explode modifier on texured object #46215

Closed
opened 2015-09-22 22:58:04 +02:00 by Philipp Hemmer · 9 comments

System Information
Ubuntu 14.04, Nvidia GeForce GTX 660 Ti

Blender Version
Broken: (example: 2.76 RC1 c586e30, see splash screen)
Worked: (optional) 2.75a

Short description of error
Using the explode modifier on an object with image texture.
Now the texture isn't visible and rendered anymore.

Exact steps for others to reproduce the error
Just open the attached file in the 2.76 RC1.

texured_explode.blend

The texture isn't displayed in the viewport with texured view and above.
When rendered it isn't visible either.

Opening the file in version 2.75a it works just fine.

**System Information** Ubuntu 14.04, Nvidia GeForce GTX 660 Ti **Blender Version** Broken: (example: 2.76 RC1 c586e30, see splash screen) Worked: (optional) 2.75a **Short description of error** Using the explode modifier on an object with image texture. Now the texture isn't visible and rendered anymore. **Exact steps for others to reproduce the error** Just open the attached file in the 2.76 RC1. [texured_explode.blend](https://archive.blender.org/developer/F237515/texured_explode.blend) The texture isn't displayed in the viewport with texured view and above. When rendered it isn't visible either. Opening the file in version 2.75a it works just fine.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @hapit

Added subscriber: @hapit
Author

It's broken in in 2.76 RC1 and it's no example ;-)
Just filled out the Bug-Template

It's broken in in 2.76 RC1 and it's no example ;-) Just filled out the Bug-Template

Added subscriber: @zeauro

Added subscriber: @zeauro

ubuntu 14.04 64 bits nvidia titan black

I confirm the bug is also present for Blender Internal master hash 1cae9c4.
Texture is displayed and rendered if generated coordinates are used. But it does not work with UVcoordinates.

ubuntu 14.04 64 bits nvidia titan black I confirm the bug is also present for Blender Internal master hash 1cae9c4. Texture is displayed and rendered if generated coordinates are used. But it does not work with UVcoordinates.

Added subscriber: @Sergey

Added subscriber: @Sergey

Caused by c61e4f2.

Caused by c61e4f2.

This issue was referenced by f964334b88

This issue was referenced by f964334b88a83c150fad6f0ac6a72dd2b108bbc2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46215
No description provided.