Fix T46215: Explode modifier looses textures